@@ -1,30 +1,53 @@
 package com.wkoonings.rockstarsit.controllers;
 
-import com.wkoonings.rockstarsit.dto.DTOArtist;
-import com.wkoonings.rockstarsit.dto.DTOArtistsResponse;
+import com.wkoonings.rockstarsit.dto.AdditArtistRequest;
+import com.wkoonings.rockstarsit.dto.ArtistPageResponse;
+import com.wkoonings.rockstarsit.dto.ArtistResponse;
+import com.wkoonings.rockstarsit.dto.PageInfo;
 import com.wkoonings.rockstarsit.model.Artist;
 import java.util.List;
+import java.util.stream.Collectors;
+import org.springframework.data.domain.Page;
 
 public class ArtistMapper {
 
-  public static DTOArtistsResponse toDTOArtistsResponse(List<Artist> artists) {
-    DTOArtistsResponse response = new DTOArtistsResponse();
-    response.content(artists.stream().map(ArtistMapper::toDTOArtist).toList());
+  public static ArtistPageResponse toResponse(Page<Artist> page) {
+    ArtistPageResponse response = new ArtistPageResponse();
+
+    // Convert artists to responses
+    List<ArtistResponse> artistResponses = page.getContent()
+                                               .stream()
+                                               .map(ArtistMapper::toResponse)
+                                               .collect(Collectors.toList());
+
+    response.setContent(artistResponses);
+
+    // Create and set page info
+    PageInfo pageInfo = new PageInfo();
+    pageInfo.setSize(page.getSize());
+    pageInfo.setNumber(page.getNumber());
+    pageInfo.setTotalElements(page.getTotalElements());
+    pageInfo.setTotalPages(page.getTotalPages());
+    pageInfo.setFirst(page.isFirst());
+    pageInfo.setLast(page.isLast());
+    pageInfo.setNumberOfElements(page.getNumberOfElements());
+    pageInfo.setEmpty(page.isEmpty());
+
+    response.setPage(pageInfo);
+
     return response;
   }
 
-  public static DTOArtist toDTOArtist(Artist artist) {
-    DTOArtist dtoArtist = new DTOArtist();
-    dtoArtist.setId(artist.getId());
-    dtoArtist.setName(artist.getName());
-    dtoArtist.setSongs(artist.getSongs().stream().map(SongMapper::toDTOSong).toList());
-    return dtoArtist;
+  public static ArtistResponse toResponse(Artist artist) {
+    ArtistResponse response = new ArtistResponse();
+    response.setId(artist.getId());
+    response.setName(artist.getName());
+    return response;
   }
 
-  public static Artist fromDTOArtist(DTOArtist dtoArtist) {
+  public static Artist fromRequest(AdditArtistRequest request) {
     Artist artist = new Artist();
-    artist.setId(dtoArtist.getId());
-    artist.setName(dtoArtist.getName());
+    artist.setName(request.getName());
     return artist;
   }
 }
